notes/examples/04_DaemonSet.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd
  namespace: namespace-name
spec:
  selector:
    matchLabels:
      app: fluentd # which pods should be managed by daemonset
  template:
    metadata:
      labels:
        app: fluentd
    spec:
      containers:
        - name: fluentd
          image: fluentd:v1.16-1
