notes/examples/05_StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: stateful-nginx
spec:
  serviceName: headless-nginxs
  replicas: 3
  selector:
    matchLabels:
      app: stateful-nginx
  template:
    metadata:
      labels:
        app: stateful-nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.26.0
          volumeMounts:
            - name: data
              mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "standard"
        resources:
          requests:
            storage: 100Mi
