notes/examples/07_Pod.secret-example.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-example
spec:
  containers:
    - name: nginx
      image: nginx:1.26.0
      volumeMounts:
        - name: secret-string-data
          mountPath: /etc/config
  volumes:
    - name: secret-string-data
      secret:
        secretName: string-data
