notes/examples/02_Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80 # port the service is listening on
      targetPort: 8080 # port the container is listening on
